--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,3 +3,6 @@ language:
   ui:
     chapter_name: "Chapter "
 delete_merged_file: true
+rmd_files:
+  html: ["index.Rmd", "01-intro.Rmd", "02-methods.Rmd", "03-results.Rmd", "04-discussion.Rmd", "05-tables.Rmd", "06-append.Rmd", "09-references.Rmd"]
+  word: ["index.Rmd", "01-intro.Rmd", "02-methods.Rmd", "03-results.Rmd", "04-discussion.Rmd", "09-references.Rmd"]
